Add devpost to socials in navbar
The icon font is now pulled from fontastic as I needed to create a custom font that includes the devpost icon

--- a/config.toml
+++ b/config.toml
@@ -50,3 +50,8 @@ theme = "minimal"
     url = "https://www.linkedin.com/in/sam-cymbaluk-515008149/"
     name = "linkedin-square"
     weight = 3
+
+[[menu.icon]]
+    url = "https://devpost.com/SamCymbaluk"
+    name = "devpost"
+    weight = 4
