--- a/config.toml
+++ b/config.toml
@@ -37,7 +37,7 @@ theme = "minimal"
 # The list of available icons can be found at http://fontawesome.io/icons/
 
 [[menu.icon]]
-    url = "samuelcymbaluk@gmail.com"
+    url = "mailto:samuelcymbaluk@gmail.com"
     name = "envelope-o"
     weight = 1
 
